tests/profile/error/camera/gotogeo_missing_latitude.profile
{
  "version": { "major": 12, "minor": 13 },
  "camera": {
    "type": "goToGeo",
    "anchor": "anchor",
    "longitude": 2.0,
    "altitude": 4.0
  }
}
